<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="add_Alarm_title">알람 추가</string>
    <string name="add_favorite_title">즐겨찾기 추가</string>
    <string name="app_name">울산버스정보</string>
    <string name="app_picker_name">어플리케이션</string>
    <string name="arrival_bus_next">다음</string>
    <string name="arrival_bus_prev">이전</string>
    <string name="arrival_dialog_message">도착시간정보를 받고 있습니다.</string>
    <string name="arrival_dialog_title">도착정보</string>
    <string name="bookmark_picker_name">즐겨찾기</string>
    <string name="button_add_calendar">일정에 추가하기</string>
    <string name="button_add_contact">연락처에 추가하기</string>
    <string name="button_back">뒤로</string>
    <string name="button_book_search">책 검색</string>
    <string name="button_cancel">취소</string>
    <string name="button_clipboard_empty">복사된 항목 없음</string>
    <string name="button_custom_product_search">사용자 지정 검색</string>
    <string name="button_dial">전화 걸기</string>
    <string name="button_done">완료</string>
    <string name="button_email">이메일 보내기</string>
    <string name="button_get_directions">방향을 찾기</string>
    <string name="button_google_shopper">Google Shopper</string>
    <string name="button_mms">MMS 보내기</string>
    <string name="button_ok">확인</string>
    <string name="button_open_browser">웹브라우저로 열기</string>
    <string name="button_product_search">제품 검색</string>
    <string name="button_read_book">책 보기</string>
    <string name="button_search_book_contents">책 내용 검색</string>
    <string name="button_share_app">어플리케이션</string>
    <string name="button_share_bookmark">즐겨찾기</string>
    <string name="button_share_by_email">이메일로 공유</string>
    <string name="button_share_by_sms">SMS로 공유</string>
    <string name="button_share_clipboard">복사된 항목</string>
    <string name="button_share_contact">연락처</string>
    <string name="button_show_map">지도 보기</string>
    <string name="button_sms">SMS 보내기</string>
    <string name="button_web_search">인터넷 검색</string>
    <string name="button_wifi">네트워크에 연결</string>
    <string name="cancel">취소</string>
    <string name="chk_jisun">지선</string>
    <string name="chk_town">마을</string>
    <string name="close">닫기</string>
    <string name="connect_error">앱을 제거한뒤 재설치 후 이용부탁드립니다.</string>
    <string name="contents_contact">연락처 정보</string>
    <string name="contents_email">이메일 주소</string>
    <string name="contents_location">GPS 좌표</string>
    <string name="contents_phone">전화번호</string>
    <string name="contents_sms">전화번호</string>
    <string name="contents_text">단문</string>
    <string name="current_location">현재 버스위치</string>
    <string name="error">서버 연결실패</string>
    <string name="exitconfirm">종료하시겠습니까?</string>
    <string name="favorite_empty_content">먼저 즐겨찾기에 등록해 주세요</string>
    <string name="favorite_info_changed">해당 기반정보가 변경 혹은 삭제되었습니다. 즐겨찾기를 다시 등록하여 주십시오.</string>
    <string name="favorite_info_changed_title">즐겨찾기 정보 삭제</string>
    <string name="favorite_info_confirm_delete">즐겨찾기 목록에서 삭제 하시겠습니까?</string>
    <string name="favorite_noti_content">알람은 2개까지 등록 가능합니다.</string>
    <string name="go_to_stop_information">정류장 버스 도착 정보를 확인 하시겠습니까?</string>
    <string name="history_clear_text">기록 삭제</string>
    <string name="history_email_title">바코드 스캐너 기록</string>
    <string name="history_send">기록 보내기</string>
    <string name="history_title">기록</string>
    <string name="info_emergen_title">비상운행</string>
    <string name="info_notice_title">공지사항</string>
    <string name="info_route_version_title">노선</string>
    <string name="info_version_prefix">Ver</string>
    <string name="info_version_title">버전정보</string>
    <string name="information_manual_title">사용방법</string>
    <string name="input_text_symbol_limit">사용이 제한된 특수기호가 포함되어 있습니다.</string>
    <string name="insert_dialog_fail">"데이터 다운로드 실패. 
 재시도 하시겠습니까?"</string>
    <string name="insert_dialog_message">데이터를 받고 있습니다.</string>
    <string name="insert_dialog_message_title">데이터 다운</string>
    <string name="insert_dialog_succ">데이터 다운로드 성공.</string>
    <string name="insert_update_dialog_fail">새로운 업데이트 데이터가 있습니다. 업데이트 하시겠습니까?</string>
    <string name="kakao_app_key">7a4ce926636e42960b003cbde908720a</string>
    <string name="loading_end">"' 뒤로 ' 버튼을 한번 더 누르시면 종료됩니다."</string>
    <string name="main_return">메인화면</string>
    <string name="map_tcardstore">카드충전소</string>
    <string name="menu_about">정보</string>
    <string name="menu_help">도움말</string>
    <string name="menu_history">기록</string>
    <string name="menu_settings">설정</string>
    <string name="menu_share">공유</string>
    <string name="message_error">버젼 정보를 확인할 수 없습니다.</string>
    <string name="msg_about">오픈소스 ZXing Barcode Library를 이용하여 제작된 어플</string>
    <string name="msg_buggy">해당 기기는 바코드 스캐닝시 알려진 버그가 있습니다. 더 많은 정보를 얻기 위해서는 다음 주소를 방문하세요.(영문)http://code.google.com/p/zxing/wiki/FrequentlyAskedQuestions</string>
    <string name="msg_bulk_mode_scanned">일괄 스캔 모드: 바코드가 읽히고 저장됩니다.</string>
    <string name="msg_camera_framework_bug">죄송합니다. 기기의 카메라에 오류가 생겼습니다. 기기를 재시작 해야될 수도 있습니다.</string>
    <string name="msg_default_contents">내용</string>
    <string name="msg_default_format">포맷</string>
    <string name="msg_default_meta">메타데이터</string>
    <string name="msg_default_mms_subject">안녕하세요</string>
    <string name="msg_default_status">바코드를 사각형 안에 비춰주세요.</string>
    <string name="msg_default_time">시간</string>
    <string name="msg_default_type">종류</string>
    <string name="msg_encode_barcode_failed">요청된 바코드를 만들지 못하였습니다.</string>
    <string name="msg_encode_contents_failed">주어진 데이터로 바코드를 만들지 못하였습니다.</string>
    <string name="msg_google_shopper_missing">Google Shopper가 설치되어 있지 않습니다.</string>
    <string name="msg_install_google_shopper">Google Shopper는 바코드 스캐닝을 이용하여 인터넷을 열지 않고 가격, 리뷰 등을 열람하는 기능을 제공합니다. 사용해 보시겠습니까?</string>
    <string name="msg_intent_failed">죄송합니다. 어플리케이션이 실행되지 않습니다. 바코드 내용이 잘못 되었을 수도 있습니다.</string>
    <string name="msg_loading_apps">설치된 어플리케이션을 불러옵니다…</string>
    <string name="msg_not_our_results">이 어플리케이션을 벗어나고 있습니다. 검색 결과는 이 어플리케이션과 관련이 없음을 미리 밝힙니다.</string>
    <string name="msg_redirect">리디렉션</string>
    <string name="msg_sbc_book_not_searchable">죄송합니다. 이 책은 검색이 되지 않습니다.</string>
    <string name="msg_sbc_failed">죄송합니다. 검색 도중 문제가 발생했습니다.</string>
    <string name="msg_sbc_no_page_returned">수신받은 페이지가 없습니다.</string>
    <string name="msg_sbc_page">페이지</string>
    <string name="msg_sbc_searching_book">책 검색중…</string>
    <string name="msg_sbc_snippet_unavailable">내용이 열람되지 않습니다.</string>
    <string name="msg_sbc_unknown_page">알수 없는 페이지</string>
    <string name="msg_share_explanation">해당 기기의 바코드를 다른 기기로 스캔해서 데이터를 공유할 수 있습니다.</string>
    <string name="msg_share_subject_line">제가 스캔한 바코드 목록입니다.</string>
    <string name="msg_share_text">입력하거나 텍스트</string>
    <string name="msg_unmount_usb">죄송합니다. SD카드를 사용할 수 없습니다.</string>
    <string name="mylocation">내 위치</string>
    <string name="network_error">잠시 후 다시 시도해 주세요</string>
    <string name="network_error_title">데이터 오류</string>
    <string name="no">아니요</string>
    <string name="no_timetable_item">배차 정보가 없습니다.</string>
    <string name="noti_title">공지사항</string>
    <string name="ok">확인</string>
    <string name="preferences_actions_title">바코드를 스캔했을때…</string>
    <string name="preferences_bulk_mode_summary">다수의 바코드를 스캔하고 저장합니다.</string>
    <string name="preferences_bulk_mode_title">일괄 스캔 모드</string>
    <string name="preferences_copy_to_clipboard_title">복사하기</string>
    <string name="preferences_custom_product_search_title">사용자 지정 검색 주소</string>
    <string name="preferences_decode_1D_title">1차원 바코드를 읽기</string>
    <string name="preferences_decode_Data_Matrix_title">데이터 행렬(Data Matrix)을 해석하기</string>
    <string name="preferences_decode_QR_title">QR 코드를 읽기</string>
    <string name="preferences_front_light_summary">특정 기기에서는 어두운 환경에서의 스캐닝 기능을 향상 시키지만 너무 밝을 수도 있습니다. 모든 기기에서 작동되지 않습니다.</string>
    <string name="preferences_front_light_title">플래시 사용하기</string>
    <string name="preferences_general_title">일반 설정</string>
    <string name="preferences_name">설정</string>
    <string name="preferences_play_beep_title">전자음</string>
    <string name="preferences_remember_duplicates_summary">복수의 같은 바코드를 기록에 저장</string>
    <string name="preferences_remember_duplicates_title">중복된 바코드 저장</string>
    <string name="preferences_result_title">결과 설정</string>
    <string name="preferences_reverse_image_summary">단지 전면 카메라와 장치에 사용</string>
    <string name="preferences_reverse_image_title">반대로 카메라 이미지</string>
    <string name="preferences_scanning_title">바코드 스캐닝 시…</string>
    <string name="preferences_supplemental_summary">바코드 내용에 대한 자세한 정보를 검색하려고</string>
    <string name="preferences_supplemental_title">검색 상세 정보</string>
    <string name="preferences_vibrate_title">진동</string>
    <string name="remove_all">전체삭제</string>
    <string name="remove_choice">선택삭제</string>
    <string name="request_dialog_fail">"데이터 다운로드 실패. 
 잠시 후 다시 시도해 주세요"</string>
    <string name="restart">재시도</string>
    <string name="result_address_book">연락처 정보를 찾았습니다</string>
    <string name="result_calendar">일정 이벤트를 찾았습니다</string>
    <string name="result_email_address">이메일 주소를 찾았습니다</string>
    <string name="result_geo">GPS 좌표를 찾았습니다</string>
    <string name="result_isbn">책을 찾았습니다</string>
    <string name="result_product">제품을 찾았습니</string>
    <string name="result_sms">전화번호를 찾았습니다</string>
    <string name="result_tel">전화번호를 찾았습니다</string>
    <string name="result_text">단문을 찾았습니다</string>
    <string name="result_uri">인터넷 주소를 찾았습니다</string>
    <string name="result_wifi">WiFi 설정을 찾았습니다</string>
    <string name="route_info_direction_change">상/하행 변경</string>
    <string name="route_info_direction_left">역방향</string>
    <string name="route_info_direction_right">정방향</string>
</resources>