<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen>
    <PreferenceCategory n1:title="@string/preferences_scanning_title"
      xmlns:n1="http://schemas.android.com/apk/res/android">
        <CheckBoxPreference n1:title="@string/preferences_decode_1D_title" n1:key="preferences_decode_1D" n1:defaultValue="true" />
        <CheckBoxPreference n1:title="@string/preferences_decode_QR_title" n1:key="preferences_decode_QR" n1:defaultValue="true" />
        <CheckBoxPreference n1:title="@string/preferences_decode_Data_Matrix_title" n1:key="preferences_decode_Data_Matrix" n1:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory n2:title="@string/preferences_actions_title"
      xmlns:n2="http://schemas.android.com/apk/res/android">
        <CheckBoxPreference n2:title="@string/preferences_play_beep_title" n2:key="preferences_play_beep" n2:defaultValue="true" />
        <CheckBoxPreference n2:title="@string/preferences_vibrate_title" n2:key="preferences_vibrate" n2:defaultValue="false" />
        <CheckBoxPreference n2:title="@string/preferences_copy_to_clipboard_title" n2:key="preferences_copy_to_clipboard" n2:defaultValue="true" />
        <CheckBoxPreference n2:title="@string/preferences_remember_duplicates_title" n2:key="preferences_remember_duplicates" n2:summary="@string/preferences_remember_duplicates_summary" n2:defaultValue="false" />
        <CheckBoxPreference n2:title="@string/preferences_supplemental_title" n2:key="preferences_supplemental" n2:summary="@string/preferences_supplemental_summary" n2:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory n3:title="@string/preferences_result_title"
      xmlns:n3="http://schemas.android.com/apk/res/android">
        <EditTextPreference n3:title="@string/preferences_custom_product_search_title" n3:key="preferences_custom_product_search" />
    </PreferenceCategory>
    <PreferenceCategory n4:title="@string/preferences_general_title"
      xmlns:n4="http://schemas.android.com/apk/res/android">
        <CheckBoxPreference n4:title="@string/preferences_front_light_title" n4:key="preferences_front_light" n4:summary="@string/preferences_front_light_summary" n4:defaultValue="false" />
        <CheckBoxPreference n4:title="@string/preferences_bulk_mode_title" n4:key="preferences_bulk_mode" n4:summary="@string/preferences_bulk_mode_summary" n4:defaultValue="false" />
        <CheckBoxPreference n4:title="@string/preferences_reverse_image_title" n4:key="preferences_reverse_image" n4:summary="@string/preferences_reverse_image_summary" n4:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>