<?xml version="1.0" encoding="utf-8"?>
<ScrollView n1:gravity="center" n1:layout_gravity="center" n1:layout_width="wrap_content" n1:layout_height="wrap_content"
  xmlns:n1="http://schemas.android.com/apk/res/android">
    <LinearLayout n1:gravity="center" n1:orientation="vertical" n1:padding="8.0dip" n1:layout_width="wrap_content" n1:layout_height="wrap_content">
        <TextView n1:textSize="18.0sp" n1:textColor="@color/share_text" n1:paddingBottom="8.0dip" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/msg_share_explanation" />
        <ImageView n1:paddingBottom="8.0dip" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:src="@drawable/share_via_barcode" n1:scaleType="center" />
        <LinearLayout n1:orientation="horizontal" n1:paddingBottom="8.0dip" n1:layout_width="fill_parent" n1:layout_height="wrap_content">
            <Button n1:id="@id/share_app_button" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/button_share_app" n1:layout_weight="1.0" />
            <Button n1:id="@id/share_bookmark_button" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/button_share_bookmark" n1:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout n1:orientation="horizontal" n1:paddingBottom="8.0dip" n1:layout_width="fill_parent" n1:layout_height="wrap_content">
            <Button n1:id="@id/share_contact_button" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/button_share_contact" n1:layout_weight="1.0" />
            <Button n1:id="@id/share_clipboard_button" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/button_share_clipboard" n1:layout_weight="1.0" />
        </LinearLayout>
        <EditText n1:textSize="16.0sp" n1:id="@id/share_text_view" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:hint="@string/msg_share_text" n1:singleLine="true" n1:selectAllOnFocus="true" />
    </LinearLayout>
</ScrollView>